# deepseek-v3-5c45

./: Dockerfile  README.md  docker-compose.yml  github_master.m3u8  logs_mockexchange.sh  pyproject.toml  video_url.txt
1080p/: github_playlist_1080p.m3u8  playlist_1080p.m3u8
1080p/segments/: segment_000_0a6511a5.ts  segment_001_0a6511a5.ts  segment_002_0a6511a5.ts  segment_003_0a6511a5.ts  segment_004_0a6511a5.ts  segment_005_0a6511a5.ts  segment_006_0a6511a5.ts  segment_007_0a6511a5.ts  segment_008_0a6511a5.ts  segment_009_0a6511a5.ts  segment_010_0a6511a5.ts  segment_011_0a6511a5.ts  segment_012_0a6511a5.ts  segment_013_0a6511a5.ts  segment_014_0a6511a5.ts  segment_015_0a6511a5.ts  segment_016_0a6511a5.ts  segment_017_0a6511a5.ts  segment_018_0a6511a5.ts  segment_019_0a6511a5.ts  segment_020_0a6511a5.ts  segment_021_0a6511a5.ts  segment_022_0a6511a5.ts  segment_023_0a6511a5.ts  segment_024_0a6511a5.ts  segment_025_0a6511a5.ts  segment_026_0a6511a5.ts  segment_027_0a6511a5.ts  segment_028_0a6511a5.ts  segment_029_0a6511a5.ts  segment_030_0a6511a5.ts  segment_031_0a6511a5.ts  segment_032_0a6511a5.ts  segment_033_0a6511a5.ts  segment_034_0a6511a5.ts  segment_035_0a6511a5.ts  segment_036_0a6511a5.ts  segment_037_0a6511a5.ts  segment_038_0a6511a5.ts  segment_039_0a6511a5.ts  (+134 more)
720p/: github_playlist_720p.m3u8  playlist_720p.m3u8
720p/segments/: segment_000_d1079671.ts  segment_001_d1079671.ts  segment_002_d1079671.ts  segment_003_d1079671.ts  segment_004_d1079671.ts  segment_005_d1079671.ts  segment_006_d1079671.ts  segment_007_d1079671.ts  segment_008_d1079671.ts  (+166 more)
(+12 files in other folders)
